hosting react on springboot and mongodb remote url